<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/legs_zobrazovanie"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintVertical_bias="0.268"/>
    <TextView
            android:text="@string/leg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.748"
            app:layout_constraintVertical_bias="0.268"/>
    <TextView
            android:text="@string/zobraz_0"
            android:layout_width="180dp"
            android:layout_height="110dp" android:id="@+id/nahadzane_skore"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.069" android:textSize="96sp"/>
    <TextView
            android:text="@string/highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nazov"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.045" app:layout_constraintVertical_bias="0.022"
            android:textStyle="bold" android:textSize="20sp"/>
    <TextView
            android:text="@string/zobraz_0"
            android:layout_width="93dp"
            android:layout_height="65dp" android:id="@+id/hodene_score"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.351" android:textSize="48sp"/>
    <Button
            android:text="@string/zobraz_7"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_7"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.177" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.499"/>
    <Button
            android:text="@string/zobraz_4"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_4"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.177" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.605"/>
    <Button
            android:text="@string/zobraz_3"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_3"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.822" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.713"/>
    <Button
            android:text="@string/zobraz_5"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_5"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.504" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.605"/>
    <ImageButton
            android:layout_width="90dp"
            android:layout_height="62dp" app:srcCompat="@drawable/done_50" android:id="@+id/potvrd_zadane_skore_button"
            android:backgroundTint="#6200ED" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.822" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.823" android:contentDescription="@android:string/no"/>
    <Button
            android:text="@string/zobraz_2"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.504" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.713"/>
    <Button
            android:text="@string/zobraz_8"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_8"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.504" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.499"/>
    <Button
            android:text="@string/zobraz_0"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_0"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.504" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.823"/>
    <ImageButton
            android:layout_width="90dp"
            android:layout_height="62dp" app:srcCompat="@drawable/icons8close50"
            android:id="@+id/vymaz_zadane_skore_button"
            android:backgroundTint="#6200EC" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintVertical_bias="0.823" android:contentDescription="@android:string/cancel"/>
    <Button
            android:text="@string/zobraz_6"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_6"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.822" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.605"/>
    <Button
            android:text="@string/zobraz_1"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_1"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.177" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.713"/>
    <Button
            android:text="@string/zobraz_9"
            android:layout_width="90dp"
            android:layout_height="62dp" android:id="@+id/cislo_9"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.822" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.499"/>
    <TextView
            android:text="@string/round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintVertical_bias="0.268"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/rounds_zobrazovanie"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.014"
            app:layout_constraintVertical_bias="0.268"/>
</androidx.constraintlayout.widget.ConstraintLayout>