<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/legs"
            android:layout_width="217dp"
            android:layout_height="48dp" android:id="@+id/t121_legs"
            android:textSize="34sp" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.041" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="26dp" app:layout_constraintTop_toBottomOf="@+id/t121_incresed_by_score_text2"/>
    <Spinner
            android:layout_width="110dp"
            android:layout_height="48dp" android:id="@+id/drop_down_legs"
            app:layout_constraintTop_toBottomOf="@+id/drop_down_darts_close" android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:entries="@array/rounds"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintVertical_bias="0.0"/>
    <Spinner
            android:layout_width="110dp"
            android:layout_height="48dp" android:id="@+id/drop_down_darts_close"
            app:layout_constraintTop_toBottomOf="@+id/drop_down_icreased_by" android:layout_marginTop="27dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:entries="@array/rounds"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/Darts_to_close"
            android:layout_width="217dp"
            android:layout_height="48dp" android:id="@+id/t121_incresed_by_score_text2"
            android:textSize="34sp" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.042" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/t121_incresed_by_score_text"/>
    <TextView
            android:text="@string/Increased_by"
            android:layout_width="217dp"
            android:layout_height="50dp" android:id="@+id/t121_incresed_by_score_text"
            android:textSize="34sp" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.042" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="31dp" app:layout_constraintTop_toBottomOf="@+id/t121_start_score_text"/>
    <TextView
            android:text="@string/start"
            android:layout_width="176dp"
            android:layout_height="45dp" android:id="@+id/t121_start_score_text"
            android:textSize="34sp" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.043" app:layout_constraintVertical_bias="0.02"
            android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/t121_text_nazov"/>
    <TextView
            android:text="@string/t121_settings"
            android:layout_width="350dp"
            android:layout_height="59dp" android:id="@+id/t121_text_nazov"
            android:textSize="34sp" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.262" app:layout_constraintVertical_bias="0.023"/>
    <Button
            android:text="@string/START"
            android:layout_width="110dp"
            android:layout_height="62dp" android:id="@+id/t121_start_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.726" android:textSize="20sp"/>
    <Spinner
            android:layout_width="110dp"
            android:layout_height="48dp" android:id="@+id/drop_down_start_score"
            app:layout_constraintTop_toTopOf="parent"
            android:entries="@array/start_score"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintVertical_bias="0.146"/>
    <Spinner
            android:layout_width="110dp"
            android:layout_height="48dp" android:id="@+id/drop_down_icreased_by"
            app:layout_constraintTop_toBottomOf="@+id/drop_down_start_score" android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:entries="@array/increased_by"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintVertical_bias="0.007"/>
</androidx.constraintlayout.widget.ConstraintLayout>